--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -64,3 +64,13 @@
   z-index: 10;
 }
 
+
+
+.profile-avatar {
+    max-width: 120px;
+    margin: auto;
+    display: block;
+    width: 90%;
+    /* height: 0; */
+    /* padding-bottom: 90%; */
+}
