--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -74,3 +74,12 @@
     /* height: 0; */
     /* padding-bottom: 90%; */
 }
+
+.page-alert {
+    position: fixed;
+    z-index: 9900;
+    top: 98px;
+    max-width: 50%;
+    max-height: 30%;
+    overflow: auto;
+}
