--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -2,10 +2,10 @@
   padding-bottom: 100%;
   width: 100%;
   height: 0;
-  /*max-width: 320px;*/
+  /* max-width: 320px; */
   /*max-height: 320px;*/
   /*margin: auto;*/
-  background-position: center !important;
+  /* background-position: center !important; */
   background-repeat: no-repeat !important;
   background-size: cover !important;
 }
