--- a/public/assets/css/admin/payouts.css
+++ b/public/assets/css/admin/payouts.css
@@ -4,19 +4,20 @@
 
  #pay_selected_users_block {
   position: fixed;
-  top: 70px;
+  top: 30%;
   right: 0;
   z-index: 100;
-  background-color: rgb(248, 249, 252);
-  /* padding: 45px 10px; */
-  transition: all .4s ease-in;
-  /* transform: translateX(100%); */
+  background-color: rgba(248, 249, 252, 0);
+  padding: 45px 10px;
+  transition: all 1s ease-in;
+  transform: translateX(100%);
 }
 
-#payout_requests #pay_selected_users_block.show_block {
+#pay_selected_users_block.show_block {
   transform: unset;
+  background-color: rgb(248, 249, 252);
 }
 
-#payout_requests #pay_selected_users_block #pay_selected_users {
+#pay_selected_users_block #pay_selected_users {
 }
 
