--- a/public/assets/css/news-list.css
+++ b/public/assets/css/news-list.css
@@ -14,6 +14,7 @@
 
 #news-list {
   margin-top: 47px;
+  /* position: relative; */
 }
 
 .switch_category{
@@ -24,4 +25,14 @@
     color: #fff;
     background-color: rgba(133, 135, 150, 0.7);
     border-color: #858796;
+}
+
+.news_container {
+}
+
+.news_container.active_category {
+}
+
+.news_container.inactive_category {
+    display: none;
 }
